# kaa-game-data

./: pyproject.toml
.github/workflows/: build.yml
src/kaa_data/: cli.py  pipeline.py
src/kaa_data/release/: publish.py  versioning.py
tests/: test_release_versioning.py
tools/: extract_resources.py
