[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaa-data"
version = "0.2.0"
description = "Gakuen Idolmaster offline game data build pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2",
    "requests>=2.32",
    "cryptography>=42.0",
    "protobuf>=6.33",
    "UnityPy>=1.10",
    "pillow>=11.3",
    "opencv-python-headless>=4.10",
    "rich>=13.9",
    "tqdm>=4.67",
    "zstandard>=0.25",
    "jinja2>=3.1",
    "pandas>=2.0",
    "pydub>=0.25",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kaa-data = "kaa_data.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]